# gridiron

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
configs/: bdb-2018-schema.yaml  bdb-2025-schema.yaml  schema.yaml
data/nfl-bdb/2026/: README.md
docs/: DATA_LAKE_GUIDE.md
scripts/: diagnose_pool.py  generate_dummy_data.py  random_plays_sampler.py
src/: export.py  ingest.py  query.py
test_data/2018/: 2018-20plays.csv
test_data/2023/: 2023-20plays.csv
